hphp/test/zend/good/Zend/tests/traits/error_015.php.expectf

Fatal error: Method 'test' declared in multiple traits in %s/error_015.php on line 11
